--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-swipeable": "^7.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
