--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fullcalendar/timegrid": "^6.1.8",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
+    "@mui/x-charts": "^6.19.8",
     "@mui/x-data-grid": "^6.15.0",
     "@mui/x-date-pickers": "^6.15.0",
     "@reduxjs/toolkit": "^1.9.6",
